Fix bug issues with the secondary navigation, banner content alignment, and the collapsible accordion for mobile view. Restyle the application and reference section.

--- a/main.css
+++ b/main.css
@@ -15,11 +15,12 @@
       margin: 0;
       width: 100%;
       height: 100%;
+      font-family: "Open Sans";
   }
 
   /* spinner */
 
-  .spinner-container {
+.spinner-container {
       height: 600px;
   }
 
@@ -55,13 +56,13 @@
     width: 75vh;
     font-size: 1.2em;
     letter-spacing: -1px;
-    padding: 20px;     
+    padding: 20px;
     } 
 
   .banner-content-slogan, .banner-content-title {
     text-transform: uppercase;
     font-weight: 800;
-    margin: -10px 0;
+    margin: 0;
   }
 
   .banner-content-slogan {
@@ -84,6 +85,7 @@
 
   .banner-content-message {
       font-family: "Open Sans";
+      margin: 0;
  
   }
 
@@ -97,12 +99,12 @@
   }
 
   /* align top navbar */
-  ul {
-      height: 63px;  
-  }
-
   li {
-      margin-left: 30px;
+    margin-left: 30px;
+}
+  
+.collapsible li {
+      margin-left: 0px;
   }
 
   .tnc-list {
@@ -125,7 +127,7 @@
   }
 
   .tag-line {
-      font-size: 2em;
+      font-size: 1.5em;
       font-family: "Open Sans bold"
   }
 
@@ -193,7 +195,6 @@
     display: none;
     padding: 6px 12px;
     border-top: none;
-    padding: 0 50px;
     background-color: #FFF0D1 
 }
 
@@ -250,11 +251,14 @@ h4 {
 
 .item {
     font-size: 1em;
+
 }
 
 .item-title {
     font-weight: 700;
+    font-size: 1.2em;
     margin-left: 20px;
+    margin: 10px;
 }
 
 .link-style:hover, .nav-image-title:hover {
@@ -269,8 +273,7 @@ h4 {
 .item-description {
     color: gray;
     list-style-type: disc!important;
-    font-size: 0.9em;
-    
+    font-size: 1em;
 }
 
 a {
@@ -296,7 +299,7 @@ a {
     
 }
 
-@media only screen and (max-width: 412px) {
+@media only screen and (max-width: 425px) {
     #slogan {
         font-size: 1em;
     }
@@ -308,9 +311,15 @@ a {
         position: relative;
         top: 0;
         left: 0;
-        margin: 20px auto;
-        padding: 0px 20px;
+        margin: 0 auto;
+        padding: 20px 20px;
+        /* outline-style: solid; */
     } 
+
+    .tag-line {
+        font-size: 1.2em;
+    }
+
 
     .main-banner {
     background-image: url("./images/new_banner.jpg");
@@ -318,28 +327,23 @@ a {
     background-size: cover;
     width: 100%;
     }
+
+    .row .col {
+        float: none;
+    }
     
     #banner-image {
         display: none;
+    }
+    
+    .card {
+        height: 150px;
     }
 
     .tab {
         margin-top: 0;
     }
 
-    .tag-line {
-        font-size: 1.5em;
-        font-weight: 700;
-        padding-bottom: 10px;
-    }
-
-    .tabcontent {
-        display: none;
-        padding: 0px;
-        border-top: none;
-        margin: 0 10px;
-    }
-    
     .application-text {
         font-size: 1em!important;
         margin: 10px;
@@ -400,8 +404,8 @@ a {
 }
 
 footer {
-    /* height: 30px; */
     width: 100%;
+    margin-top: -10px;
 }
 
 .hidden {
@@ -487,7 +491,8 @@ footer {
 
 .card {
     background-color: #FFB748;
-    min-height: 150px;
+    height: 150px;
+
 }
 
 .card-title {
@@ -499,9 +504,20 @@ footer {
 }
 
 .footnotes {
+    display: inline-block;
     font-size: 0.5em;
     text-transform: lowercase!important;
     font-weight: 100;
+    line-height: 20px;
+    margin-top: 5px;
+}
+
+.application-section {
+    background-color: white;
+    margin: 0;
+    padding: 5px 30px;
+    font-size: 0.8em;
+    margin-bottom: 30px;
 }
 
 span {
@@ -509,8 +525,6 @@ span {
 }
 
 .collapsible-accordion {
-    display: block;
-    min-height: 250px;
     margin: 0;
     background-color: #FFF0D1;
     box-shadow: none;
@@ -526,10 +540,6 @@ span {
 
 .collapsible-content {
     padding: 20px!important;
-}
-
-.collapsible-accordion {
-    height: 500px;
 }
 
 .add {
